<resources>
    <string name="app_name" translatable="false">Silicon</string>
    <string name="login">Login</string>
    <string name="auto_login">Auto login</string>
    <string name="select">Select</string>
    <string name="res_details_properties">Properties</string>
    <string name="res_details_name">Name: %1$s</string>
    <string name="res_details_start_date">Start date: %1$s</string>
    <string name="res_details_effective_date">Effective date: %1$s</string>
    <string name="res_details_uploader">Uploader: %1$s</string>
    <string name="res_details_download_address">Download: %1$s</string>
    <string name="res_details_size">Size: %1$.2fkb</string>
    <string name="res_details_date">Date: %1$s</string>
    <string name="downloads">Downloads</string>
    <string name="settings">App Settings</string>
    <string name="notices">Notices</string>
    <string name="past_papers">Past papers</string>
    <string name="user">User</string>
    <string name="storage">Storage</string>
    <string name="saving_path">Files saving path</string>
    <string name="clear_caches">Clear caches</string>
    <string name="encryption">Encryption</string>
    <string name="loading_md5.js">Loading md5.js</string>
    <string name="encrypting_pwd">encrypting password...</string>
    <string name="cannot_load_encryption_js">Cannot load md5.js,please try again.</string>
    <string name="cannot_encrypt_pwd">Cannot encrypt password,please try again.</string>
    <string name="network">Network</string>
    <string name="requesting">Requesting %1$s</string>
    <string name="login_data_wrong">Login failed,perhaps password is wrong.</string>
    <string name="login_io_exception">Login failed,cannot access the server.</string>
    <string name="parsing_info">Parsing informations...</string>
    <string name="about">About</string>
    <string name="write_permission_denied">Without this permission,files can not be saved</string>
    <string name="retry">retry</string>
    <string name="downloadedFiles">Downloaded files</string>
    <string name="downloadingFiles">Downloading files</string>
    <string name="empty">Empty...</string>
    <string name="download_task_is_executing">Download task is executing...</string>
    <string name="file_deleted">File has been deleted!</string>
    <string name="done">Done!</string>
    <string name="delete_files_confirm">Delete following files?</string>
    <string name="download_files_confirm">Download following files?</string>
    <string name="change_pwd">Change password</string>
    <string name="new_pwd">New password</string>
    <string name="new_pwd_confirm">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="old_pwd">Old password: %1$s</string>
    <string name="change_pwd_illegal_pwd">Password can only contain 0-9,a-z,A-Z and _</string>
    <string name="change_pwd_same_pwd">Old password is equal to new password</string>
    <string name="io_exception">Cannot connect to school server</string>
    <string name="change_pwd_succeed">Password changed successfully!</string>
    <string name="change_pwd_confirm_failed">New password confirmation failed.</string>
    <string name="guest_text">Can not view %1$s in guest mode because permission is denied by school server</string>
    <string name="guest_mode">Guest mode</string>
    <string name="filter_all">All</string>
    <string name="filter_category_mv_shooting">MV Shooting</string>
    <string name="filter_category_singing_contest">Singing contest %1$s</string>
    <string name="filter_sort_most_viewed">Most viewed</string>
    <string name="filter_sort_recent">Recent</string>
    <string name="filter_top_rated">Top rated</string>
    <string name="filter_time_today">Today</string>
    <string name="filter_time_yesterday">Yesterday</string>
    <string name="filter_time_this_month">This month</string>
    <string name="filter_time_last_month">Last month</string>
    <string name="filter_time_this_week">This week</string>
    <string name="filter_time_last_week">Last week</string>
    <string name="filter_time_this_year">This year</string>
    <string name="filter_time_last_year">Last year</string>
    <string name="filter_category_one_min_english">One minute english</string>
    <string name="filter_category_choral_speaking">Choral speaking</string>
    <string name="filter_category_gospel_week">Gospel week</string>
    <string name="filter_category_book_sharing">Book sharing</string>
    <string name="filter_category_sport_day">Sport day</string>
    <string name="no_more_context">No more context!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filter_category">Category:</string>
    <string name="filter_sort">Sort:</string>
    <string name="filter_time">Time:</string>
    <string name="video_views">%1$d views</string>
    <string name="guest">Guest</string>
    <string name="student_info" translatable="false">%1$s(%2$s%3$d)</string>
    <string name="login_mtv_data_wrong">HKID card number is wrong</string>
</resources>
