<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/form"
        android:paddingTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/category"
            android:text="@string/filter_category"
            android:layout_alignBaseline="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_toRightOf="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sort"
            android:layout_below="@+id/category"
            android:text="@string/filter_sort"
            android:layout_alignBaseline="@+id/sort_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_below="@id/category_spinner"
            android:layout_toRightOf="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time"
            android:layout_below="@+id/sort"
            android:text="@string/filter_time"
            android:layout_alignBaseline="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_below="@+id/sort_spinner"
            android:layout_toRightOf="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/done"
        android:layout_below="@id/form"
        android:layout_alignParentRight="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done" />
</RelativeLayout>